Bug 424484 - [Projects] Make RHS sections collapsible - missing border-bottom when section collapsed

--- a/bundles/org.eclipse.orion.client.ui/web/css/ide.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/ide.css
@@ -944,6 +944,9 @@ input {
 	border-color:#dadada;
 }
 
+.sectionWrapperClosed{
+	border-bottom: 1px solid;
+}
 
 .sectionWrapper{
 	border-top: 1px solid;
